k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-web
  namespace: grupo11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proyecto-web
  template:
    metadata:
      labels:
        app: proyecto-web
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: proyecto-web
        image: ghcr.io/advsnts/proyecto_web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto-web
  namespace: grupo11
spec:
  selector:
    app: proyecto-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-web
  namespace: grupo11
spec:
  ingressClassName: public
  rules:
  - host: grupo11.inphotech.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proyecto-web
            port:
              number: 8080
